# singularity_spiking_network

./: .gitignore  LICENSE  README.md  build_container
GranularLayerModel/: .gitignore  README.md  pyproject.toml
GranularLayerModel/connectivity/: README.md  mf_grc.db
GranularLayerModel/scripts/: scale_db.py
GranularLayerModel/src/: README.md  args.py  cells.py  network.py  utils.py
GranularLayerModel/src/mod/: vecstim.mod
GranularLayerModel/tests/: test_scale_db.py  test_smoke.py
batch/: levi.sh
def_files/: HPCtemplate.def  eren.def  hpc.def.template  levi.def  local.def.template  olaf.def
results/: benchmark.csv  benchmark_1M.csv  benchmark_model_building.csv
scripts/: plots.R
